--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         rel="stylesheet">
 
     <link rel="stylesheet" type="text/css" href="./src/css/style.css">
-    <link rel="stylesheet" href="./src/css/responsivel.css">
+    <link rel="stylesheet" href="./src/css/reponsivo.css">
 
     <title>Minha Coleção de HQs</title>
 
@@ -25,7 +25,7 @@
         <div class="wrapper">
             <div class="cover-container" id="coverContainer">
                 <!-- Inserir suas capas aqui -->
-                <div class="cover"><a href="/"><img class="logo selecionado" src="./src/imagens/familia-sacana-logo.png" alt=""></a></div>
+                <div class="cover"><a href="./index.html"><img class="logo selecionado" src="./src/imagens/familia-sacana-logo.png" alt=""></a></div>
                 <div class="cover"><a href="./src/html/caipiras.html"><img class="logo" src="./src/imagens/os-caipiras-logo.png" alt=""></a></div>
                 <div class="cover"><a href=""><img class="logo" src="./src/imagens/os-surubas-logo.png" alt=""></a></div>
                 <div class="cover"><a href=""><img class="logo" src="./src/imagens/os-flinstoons-logo.png" alt=""></a></div>
