--- a/src/html/caipiras.html
+++ b/src/html/caipiras.html
@@ -12,7 +12,7 @@
         rel="stylesheet">
 
     <link rel="stylesheet" type="text/css" href="../css/style.css">
-    <link rel="stylesheet" href="../css/responsivel.css">
+    <link rel="stylesheet" href="../css/reponsivo.css">
 
     <title>Minha Coleção de HQs</title>
 
@@ -26,7 +26,7 @@
             <div class="cover-container" id="coverContainer">
                 <!-- Inserir suas capas aqui -->
                 <div class="cover"><a href="/"><img class="logo" src="../imagens/os-caipiras-logo.png" alt=""></a></div>
-                <div class="cover"><a href="/index.html"><img class="logo selecionado"
+                <div class="cover"><a href="../../index.html"><img class="logo selecionado"
                             src="../imagens/familia-sacana-logo.png" alt=""></a></div>
                 <div class="cover"><a href=""><img class="logo" src="../imagens/os-surubas-logo.png" alt=""></a></div>
                 <div class="cover"><a href=""><img class="logo" src="../imagens/os-flinstoons-logo.png" alt=""></a>
