--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
                 <!-- Inserir suas capas aqui -->
                 <div class="cover"><a href="./index.html"><img class="logo selecionado" src="./src/imagens/familia-sacana-logo.png" alt=""></a></div>
                 <div class="cover"><a href="./src/html/caipiras.html"><img class="logo" src="./src/imagens/os-caipiras-logo.png" alt=""></a></div>
-                <div class="cover"><a href=""><img class="logo" src="./src/imagens/os-surubas-logo.png" alt=""></a></div>
-                <div class="cover"><a href=""><img class="logo" src="./src/imagens/os-flinstoons-logo.png" alt=""></a></div>
+                <div class="cover"><a href="./src/html/os-surubas.html"><img class="logo" src="./src/imagens/os-surubas-logo.png" alt=""></a></div>
+                <div class="cover"><a href="./src/html/os-flinstoons.html"><img class="logo" src="./src/imagens/os-flinstoons-logo.png" alt=""></a></div>
                 <div class="cover"><a href=""><img class="logo simptoons" src="./src/imagens/os-simptoons-logo.png" alt=""></a></div>
-                <div class="cover"><a href=""><img class="logo narutoon" src="./src/imagens/narutoon-logo.png" alt=""></a></div>
+                <div class="cover"><a href="./src/html/narutoon.html"><img class="logo narutoon" src="./src/imagens/narutoon-logo.png" alt=""></a></div>
                 <!-- Adicione mais capas conforme necessário -->
             </div>
             <button class="prev" onclick="prevGroup()">❮</button>
