--- a/src/html/caipiras.html
+++ b/src/html/caipiras.html
@@ -25,15 +25,20 @@
         <div class="wrapper">
             <div class="cover-container" id="coverContainer">
                 <!-- Inserir suas capas aqui -->
-                <div class="cover"><a href="/"><img class="logo" src="../imagens/os-caipiras-logo.png" alt=""></a></div>
+                <div class="cover"><a href="./caipiras.html"><img class="logo" src="../imagens/os-caipiras-logo.png" alt=""></a></div>
+
                 <div class="cover"><a href="../../index.html"><img class="logo selecionado"
                             src="../imagens/familia-sacana-logo.png" alt=""></a></div>
-                <div class="cover"><a href=""><img class="logo" src="../imagens/os-surubas-logo.png" alt=""></a></div>
-                <div class="cover"><a href=""><img class="logo" src="../imagens/os-flinstoons-logo.png" alt=""></a>
+
+                <div class="cover"><a href="./os-surubas.html"><img class="logo" src="../imagens/os-surubas-logo.png" alt=""></a></div>
+
+                <div class="cover"><a href="./os-flinstoons.html"><img class="logo" src="../imagens/os-flinstoons-logo.png" alt=""></a>
                 </div>
-                <div class="cover"><a href=""><img class="logo simptoons" src="../imagens/os-simptoons-logo.png"
+
+                <div class="cover"><a href="./"><img class="logo simptoons" src="../imagens/os-simptoons-logo.png"
                             alt=""></a></div>
-                <div class="cover"><a href=""><img class="logo narutoon" src="../imagens/narutoon-logo.png" alt=""></a>
+
+                <div class="cover"><a href="./narutoon.html"><img class="logo narutoon" src="../imagens/narutoon-logo.png" alt=""></a>
                 </div>
                 <!-- Adicione mais capas conforme necessário -->
             </div>
