--- a/src/html/narutoon.html
+++ b/src/html/narutoon.html
@@ -20,7 +20,7 @@
 
 <body class="fundo-narutoon">
     <header>
-        <h1 class="titulo">Os Flinstoons</h1>
+        <h1 class="titulo">Narutoon</h1>
 
         <div class="wrapper">
             <div class="cover-container" id="coverContainer">
@@ -35,7 +35,7 @@
 
                 <div class="cover"><a href="../../index.html"><img class="logo selecionado" src="../imagens/familia-sacana-logo.png" alt=""></a></div>
 
-                <div class="cover"><a href=""><img class="logo simptoons" src="../imagens/os-simptoons-logo.png"alt=""></a></div>
+                <div class="cover"><a href="./simptoons.html"><img class="logo simptoons" src="../imagens/os-simptoons-logo.png"alt=""></a></div>
 
     
             </div>
@@ -47,49 +47,49 @@
 
     <main>
         <section class="hq">
-            <a href="https://drive.google.com/file/d/0Bys-1hA9z7WlMmpHbkpxeVNhcGs/view?usp=drive_link&resourcekey=0--wclL--9GYXYMFQt_OhOaA"
+            <a href="https://stfly.me/N001"
                 target="_blank"><img src="../narutoon-imagens/hq1.webp" alt=""></a>
             <h2>001 O Espetacular Homem-Aranha 529 hq1</h2>
         </section>
 
         <section class="hq">
-            <a href="https://drive.google.com/file/d/0Bys-1hA9z7WlaDRaLS1sNThZVnM/view?usp=drive_link&resourcekey=0-npqMeI-T5citRFo32hpglA"
+            <a href="https://stfly.me/N002"
                 target="_blank"><img src="../narutoon-imagens/hq2.webp" alt=""></a>
             <h2>002 O Espetacular Homem-Aranha 530</h2>
         </section>
 
         <section class="hq">
-            <a href="https://drive.google.com/file/d/0Bys-1hA9z7WlVEwyOF9fMl9XWTA/view?usp=drive_link&resourcekey=0-lPPu2oBx7ixl1WnyFOldZg"
-                target="_blank"><img src="../narutoon-imagens/hq3.png" alt="//"></a>
+            <a href="https://stfly.me/N003"
+                target="_blank"><img src="../narutoon-imagens/hq3.png" alt=""></a>
             <h2>003 Quarteto Fantastico 536</h2>
         </section>
 
         <section class="hq">
-            <a href="https://drive.google.com/file/d/0Bys-1hA9z7Wlay1FU285N2pIbWM/view?usp=drive_link&resourcekey=0-2PUM3EzysA96uEm1toYLJw"
+            <a href="https://stfly.me/N004"
                 target="_blank"><img src="../narutoon-imagens/hq4.png" alt=""></a>
             <h2>004. Novos Vingadores - Illuminati</h2>
         </section>
 
         <section class="hq">
-            <a href="https://drive.google.com/file/d/0Bys-1hA9z7WlUl8yYks5Mmc4ZDg/view?usp=drive_link&resourcekey=0-l1NSUgbmkzaZkfTXmAPKkw"
+            <a href="https://stfly.me/N005"
                 target="_blank"><img src="../narutoon-imagens/hq5.png" alt=""></a>
             <h2>005. O Espetacular Homem-Aranha 531</h2>
         </section>
 
         <section class="hq">
-            <a href="https://drive.google.com/file/d/0Bys-1hA9z7WlUFRqak5TV1N2eU0/view?resourcekey=0-ouOCI0fyQng9bYDIsSjPwA"
+            <a href="https://stfly.me/N006"
                 target="_blank"><img src="../narutoon-imagens/hq6.png" alt=""></a>
             <h2>006. Opening Shot - Livro de Esboços</h2>
         </section>
 
         <section class="hq">
-            <a href="https://drive.google.com/file/d/0Bys-1hA9z7WlMVJpNmt6UTROTEU/view?usp=drive_link&resourcekey=0-jPMSQ8I-JjGC7_J82hv4FA"
+            <a href="https://stfly.me/N007"
                 target="_blank"><img src="../narutoon-imagens/hq7.png" alt=""></a>
             <h2>007. Quarteto Fantastico 537</h2>
         </section>
 
         <section class="hq">
-            <a href="https://drive.google.com/file/d/0Bys-1hA9z7WlR1RCc1hYTDJFeDQ/view?usp=drive_link&resourcekey=0-i6TxzNASl-ypzFi-SN4BtQ"
+            <a href="https://stfly.me/N008"
                 target="_blank"><img src="../narutoon-imagens/hq8.png" alt=""></a>
             <h2>008. Guerra Civil 01 de 07</h2>
         </section>
