--- a/src/html/os-surubas.html
+++ b/src/html/os-surubas.html
@@ -33,7 +33,7 @@
 
                 <div class="cover"><a href="./os-flinstoons.html"><img class="logo" src="../imagens/os-flinstoons-logo.png" alt=""></a></div>
 
-                <div class="cover"><a href=""><img class="logo simptoons" src="../imagens/os-simptoons-logo.png"alt=""></a></div>
+                <div class="cover"><a href="./simptoons.html"><img class="logo simptoons" src="../imagens/os-simptoons-logo.png"alt=""></a></div>
 
                 <div class="cover"><a href="./narutoon.html"><img class="logo narutoon" src="../imagens/narutoon-logo.png" alt=""></a></div>
     
@@ -46,97 +46,97 @@
 
     <main>
         <section class="hq">
-            <a href="https://drive.google.com/file/d/0Bys-1hA9z7WlMmpHbkpxeVNhcGs/view?usp=drive_link&resourcekey=0--wclL--9GYXYMFQt_OhOaA"
+            <a href="https://stfly.me/OS001"
                 target="_blank"><img src="../os-surubas-imagens/hq1.webp" alt=""></a>
             <h2>001 O Espetacular Homem-Aranha 529 hq1</h2>
         </section>
 
         <section class="hq">
-            <a href="https://drive.google.com/file/d/0Bys-1hA9z7WlaDRaLS1sNThZVnM/view?usp=drive_link&resourcekey=0-npqMeI-T5citRFo32hpglA"
+            <a href="https://stfly.me/OS001"
                 target="_blank"><img src="../os-surubas-imagens/hq2.webp" alt=""></a>
             <h2>002 O Espetacular Homem-Aranha 530</h2>
         </section>
 
         <section class="hq">
-            <a href="https://drive.google.com/file/d/0Bys-1hA9z7WlVEwyOF9fMl9XWTA/view?usp=drive_link&resourcekey=0-lPPu2oBx7ixl1WnyFOldZg"
+            <a href="https://stfly.me/OS001"
                 target="_blank"><img src="../os-surubas-imagens/hq3.png" alt="//"></a>
             <h2>003 Quarteto Fantastico 536</h2>
         </section>
 
         <section class="hq">
-            <a href="https://drive.google.com/file/d/0Bys-1hA9z7Wlay1FU285N2pIbWM/view?usp=drive_link&resourcekey=0-2PUM3EzysA96uEm1toYLJw"
+            <a href="https://stfly.me/OS001"
                 target="_blank"><img src="../os-surubas-imagens/hq4.png" alt=""></a>
             <h2>004. Novos Vingadores - Illuminati</h2>
         </section>
 
         <section class="hq">
-            <a href="https://drive.google.com/file/d/0Bys-1hA9z7WlUl8yYks5Mmc4ZDg/view?usp=drive_link&resourcekey=0-l1NSUgbmkzaZkfTXmAPKkw"
+            <a href="https://stfly.me/OS001"
                 target="_blank"><img src="../os-surubas-imagens/hq5.png" alt=""></a>
             <h2>005. O Espetacular Homem-Aranha 531</h2>
         </section>
 
         <section class="hq">
-            <a href="https://drive.google.com/file/d/0Bys-1hA9z7WlUFRqak5TV1N2eU0/view?resourcekey=0-ouOCI0fyQng9bYDIsSjPwA"
+            <a href="https://stfly.me/OS001"
                 target="_blank"><img src="../os-surubas-imagens/hq6.png" alt=""></a>
             <h2>006. Opening Shot - Livro de Esboços</h2>
         </section>
 
         <section class="hq">
-            <a href="https://drive.google.com/file/d/0Bys-1hA9z7WlMVJpNmt6UTROTEU/view?usp=drive_link&resourcekey=0-jPMSQ8I-JjGC7_J82hv4FA"
+            <a href="https://stfly.me/OS001"
                 target="_blank"><img src="../os-surubas-imagens/hq7.png" alt=""></a>
             <h2>007. Quarteto Fantastico 537</h2>
         </section>
 
         <section class="hq">
-            <a href="https://drive.google.com/file/d/0Bys-1hA9z7WlR1RCc1hYTDJFeDQ/view?usp=drive_link&resourcekey=0-i6TxzNASl-ypzFi-SN4BtQ"
+            <a href="https://stfly.me/OS001"
                 target="_blank"><img src="../os-surubas-imagens/hq8.png" alt=""></a>
             <h2>008. Guerra Civil 01 de 07</h2>
         </section>
 
         <section class="hq">
-            <a href="https://drive.google.com/file/d/0Bys-1hA9z7WlV1RGRkIxNm5BSUE/view?usp=drive_link&resourcekey=0-yMT5o_BqJj4v7uqm9MfloQ"
+            <a href="https://stfly.me/OS001"
                 target="_blank"><img src="../os-surubas-imagens/hq9.png" alt=""></a>
             <h2>009. O Espetacular Homem-Aranha 532</h2>
         </section>
 
         <section class="hq">
-            <a href="https://drive.google.com/file/d/0Bys-1hA9z7WlOUw3eFF4d083c2s/view?resourcekey=0-KIM5NhxEtp3pQgLoDhym3Q"
+            <a href="https://stfly.me/OS001"
                 target="_blank"><img src="../os-surubas-imagens/hq10.png" alt=""></a>
             <h2>010. Mulher Hulk v2 08</h2>
         </section>
 
         <section class="hq">
-            <a href="https://drive.google.com/file/d/0Bys-1hA9z7WleUpCT1hLc3pLLU0/view?usp=drive_link&resourcekey=0-vlX-CZrFkfdHbBRmfCFd8Q"
+            <a href="https://stfly.me/OS001"
                 target="_blank"><img src="../os-surubas-imagens/hq11.png" alt=""></a>
             <h2>011. Wolverine v3 42</h2>
         </section>
 
         <section class="hq">
-            <a href="https://drive.google.com/file/d/0Bys-1hA9z7WlNFM0b0JQb0JaUHM/view?usp=drive_link&resourcekey=0-D-U3-7SwoFi4luzDx8VwkA"
+            <a href="https://stfly.me/OS001"
                 target="_blank"><img src="../os-surubas-imagens/hq12.png" alt=""></a>
             <h2>012. Guerra Civil 02 de 07</h2>
         </section>
 
         <section class="hq">
-            <a href="https://drive.google.com/file/d/0Bys-1hA9z7WlOTY1ZGJmb01wSkE/view?usp=drive_link&resourcekey=0-xeRAxBmyTSk0vblEvrG2Jg"
+            <a href="https://stfly.me/OS001"
                 target="_blank"><img src="../os-surubas-imagens/hq13.png" alt=""></a>
             <h2>013. Frontline 01 de 11</h2>
         </section>
 
         <section class="hq">
-            <a href="https://drive.google.com/file/d/0Bys-1hA9z7WlNXdtdW1iWnJQVUE/view?usp=drive_link&resourcekey=0-3eyF9zgaOE1hJr5XMOm1-A"
+            <a href="https://stfly.me/OS001"
                 target="_blank"><img src="../os-surubas-imagens/hq14.png" alt=""></a>
             <h2>014. Frontline 02 de 11</h2>
         </section>
 
         <section class="hq">
-            <a href="https://drive.google.com/file/d/0Bys-1hA9z7WlRVBBLVpESU45bms/view?usp=drive_link&resourcekey=0-mqAT65vQBQ4PEzi-_pQ9BQ"
+            <a href="https://stfly.me/OS001"
                 target="_blank"><img src="../os-surubas-imagens/hq15.png" alt=""></a>
             <h2>015. O Espetacular Homem-Aranha 533</h2>
         </section>
 
         <section class="hq">
-            <a href="https://drive.google.com/file/d/0Bys-1hA9z7WlY1ZhTEpBbjF5UmM/view?usp=drive_link&resourcekey=0-Es5Iudc3ox6iBC5_DVUsqQ"
+            <a href="https://stfly.me/OS001"
                 target="_blank"><img src="../os-surubas-imagens/hq16.png" alt=""></a>
             <h2>016. Quarteto Fantastico 538</h2>
         </section>
