--- a/src/html/caipiras.html
+++ b/src/html/caipiras.html
@@ -27,16 +27,13 @@
                 <!-- Inserir suas capas aqui -->
                 <div class="cover"><a href="./caipiras.html"><img class="logo" src="../imagens/os-caipiras-logo.png" alt=""></a></div>
 
-                <div class="cover"><a href="../../index.html"><img class="logo selecionado"
-                            src="../imagens/familia-sacana-logo.png" alt=""></a></div>
+                <div class="cover"><a href="../../index.html"><img class="logo selecionado" src="../imagens/familia-sacana-logo.png" alt=""></a></div>
 
                 <div class="cover"><a href="./os-surubas.html"><img class="logo" src="../imagens/os-surubas-logo.png" alt=""></a></div>
 
-                <div class="cover"><a href="./os-flinstoons.html"><img class="logo" src="../imagens/os-flinstoons-logo.png" alt=""></a>
-                </div>
+                <div class="cover"><a href="./os-flinstoons.html"><img class="logo" src="../imagens/os-flinstoons-logo.png" alt=""></a></div>
 
-                <div class="cover"><a href="./"><img class="logo simptoons" src="../imagens/os-simptoons-logo.png"
-                            alt=""></a></div>
+                <div class="cover"><a href="./simptoons.html"><img class="logo simptoons" src="../imagens/os-simptoons-logo.png" alt=""></a></div>
 
                 <div class="cover"><a href="./narutoon.html"><img class="logo narutoon" src="../imagens/narutoon-logo.png" alt=""></a>
                 </div>
@@ -50,265 +47,265 @@
 
     <main>
         <section class="hq">
-            <a href="https://drive.google.com/file/d/0Bys-1hA9z7WlMmpHbkpxeVNhcGs/view?usp=drive_link&resourcekey=0--wclL--9GYXYMFQt_OhOaA"
+            <a href="https://stfly.me/C001"
                 target="_blank"><img src="../caipiras-imagens/hq1.webp" alt=""></a>
             <h2>001 O Espetacular Homem-Aranha 529 hq1</h2>
         </section>
 
         <section class="hq">
-            <a href="https://drive.google.com/file/d/0Bys-1hA9z7WlaDRaLS1sNThZVnM/view?usp=drive_link&resourcekey=0-npqMeI-T5citRFo32hpglA"
+            <a href="https://stfly.me/C001"
                 target="_blank"><img src="../caipiras-imagens/hq2.webp" alt=""></a>
             <h2>002 O Espetacular Homem-Aranha 530</h2>
         </section>
 
         <section class="hq">
-            <a href="https://drive.google.com/file/d/0Bys-1hA9z7WlVEwyOF9fMl9XWTA/view?usp=drive_link&resourcekey=0-lPPu2oBx7ixl1WnyFOldZg"
+            <a href="https://stfly.me/C001"
                 target="_blank"><img src="../caipiras-imagens/hq3.png" alt="//"></a>
             <h2>003 Quarteto Fantastico 536</h2>
         </section>
 
         <section class="hq">
-            <a href="https://drive.google.com/file/d/0Bys-1hA9z7Wlay1FU285N2pIbWM/view?usp=drive_link&resourcekey=0-2PUM3EzysA96uEm1toYLJw"
+            <a href="https://stfly.me/C001"
                 target="_blank"><img src="../caipiras-imagens/hq4.png" alt=""></a>
             <h2>004. Novos Vingadores - Illuminati</h2>
         </section>
 
         <section class="hq">
-            <a href="https://drive.google.com/file/d/0Bys-1hA9z7WlUl8yYks5Mmc4ZDg/view?usp=drive_link&resourcekey=0-l1NSUgbmkzaZkfTXmAPKkw"
+            <a href="https://stfly.me/C001"
                 target="_blank"><img src="../caipiras-imagens/hq5.png" alt=""></a>
             <h2>005. O Espetacular Homem-Aranha 531</h2>
         </section>
 
         <section class="hq">
-            <a href="https://drive.google.com/file/d/0Bys-1hA9z7WlUFRqak5TV1N2eU0/view?resourcekey=0-ouOCI0fyQng9bYDIsSjPwA"
+            <a href="https://stfly.me/C001"
                 target="_blank"><img src="../caipiras-imagens/hq6.png" alt=""></a>
             <h2>006. Opening Shot - Livro de Esboços</h2>
         </section>
 
         <section class="hq">
-            <a href="https://drive.google.com/file/d/0Bys-1hA9z7WlMVJpNmt6UTROTEU/view?usp=drive_link&resourcekey=0-jPMSQ8I-JjGC7_J82hv4FA"
+            <a href="https://stfly.me/C001"
                 target="_blank"><img src="../caipiras-imagens/hq7.png" alt=""></a>
             <h2>007. Quarteto Fantastico 537</h2>
         </section>
 
         <section class="hq">
-            <a href="https://drive.google.com/file/d/0Bys-1hA9z7WlR1RCc1hYTDJFeDQ/view?usp=drive_link&resourcekey=0-i6TxzNASl-ypzFi-SN4BtQ"
+            <a href="https://stfly.me/C001"
                 target="_blank"><img src="../caipiras-imagens/hq8.png" alt=""></a>
             <h2>008. Guerra Civil 01 de 07</h2>
         </section>
 
         <section class="hq">
-            <a href="https://drive.google.com/file/d/0Bys-1hA9z7WlV1RGRkIxNm5BSUE/view?usp=drive_link&resourcekey=0-yMT5o_BqJj4v7uqm9MfloQ"
+            <a href="https://stfly.me/C001"
                 target="_blank"><img src="../caipiras-imagens/hq9.png" alt=""></a>
             <h2>009. O Espetacular Homem-Aranha 532</h2>
         </section>
 
         <section class="hq">
-            <a href="https://drive.google.com/file/d/0Bys-1hA9z7WlOUw3eFF4d083c2s/view?resourcekey=0-KIM5NhxEtp3pQgLoDhym3Q"
+            <a href="https://stfly.me/C001"
                 target="_blank"><img src="../caipiras-imagens/hq10.png" alt=""></a>
             <h2>010. Mulher Hulk v2 08</h2>
         </section>
 
         <section class="hq">
-            <a href="https://drive.google.com/file/d/0Bys-1hA9z7WleUpCT1hLc3pLLU0/view?usp=drive_link&resourcekey=0-vlX-CZrFkfdHbBRmfCFd8Q"
+            <a href="https://stfly.me/C001"
                 target="_blank"><img src="../caipiras-imagens/hq11.png" alt=""></a>
             <h2>011. Wolverine v3 42</h2>
         </section>
 
         <section class="hq">
-            <a href="https://drive.google.com/file/d/0Bys-1hA9z7WlNFM0b0JQb0JaUHM/view?usp=drive_link&resourcekey=0-D-U3-7SwoFi4luzDx8VwkA"
+            <a href="https://stfly.me/C001"
                 target="_blank"><img src="../caipiras-imagens/hq12.png" alt=""></a>
             <h2>012. Guerra Civil 02 de 07</h2>
         </section>
 
         <section class="hq">
-            <a href="https://drive.google.com/file/d/0Bys-1hA9z7WlOTY1ZGJmb01wSkE/view?usp=drive_link&resourcekey=0-xeRAxBmyTSk0vblEvrG2Jg"
+            <a href="https://stfly.me/C001"
                 target="_blank"><img src="../caipiras-imagens/hq13.png" alt=""></a>
             <h2>013. Frontline 01 de 11</h2>
         </section>
 
         <section class="hq">
-            <a href="https://drive.google.com/file/d/0Bys-1hA9z7WlNXdtdW1iWnJQVUE/view?usp=drive_link&resourcekey=0-3eyF9zgaOE1hJr5XMOm1-A"
+            <a href="https://stfly.me/C001"
                 target="_blank"><img src="../caipiras-imagens/hq14.png" alt=""></a>
             <h2>014. Frontline 02 de 11</h2>
         </section>
 
         <section class="hq">
-            <a href="https://drive.google.com/file/d/0Bys-1hA9z7WlRVBBLVpESU45bms/view?usp=drive_link&resourcekey=0-mqAT65vQBQ4PEzi-_pQ9BQ"
+            <a href="https://stfly.me/C001"
                 target="_blank"><img src="../caipiras-imagens/hq15.png" alt=""></a>
             <h2>015. O Espetacular Homem-Aranha 533</h2>
         </section>
 
         <section class="hq">
-            <a href="https://drive.google.com/file/d/0Bys-1hA9z7WlY1ZhTEpBbjF5UmM/view?usp=drive_link&resourcekey=0-Es5Iudc3ox6iBC5_DVUsqQ"
+            <a href="https://stfly.me/C001"
                 target="_blank"><img src="../caipiras-imagens/hq16.png" alt=""></a>
             <h2>016. Quarteto Fantastico 538</h2>
         </section>
 
         <section class="hq">
-            <a href="https://drive.google.com/file/d/0Bys-1hA9z7WlajNEUU1OS1ZTLWc/view?usp=drive_link&resourcekey=0-r9SRidoOm9rQsc9_ixB10w"
+            <a href="https://stfly.me/C001"
                 target="_blank"><img src="../caipiras-imagens/hq17.png" alt=""></a>
             <h2>017. NOVOS VINGADORES 21</h2>
         </section>
 
         <section class="hq">
-            <a href="https://drive.google.com/file/d/0Bys-1hA9z7WlUnBTOC1JOF9NYjQ/view?usp=drive_link&resourcekey=0-7TM7ugAdPSCDFpl5b980qQ"
+            <a href="https://stfly.me/C001"
                 target="_blank"><img src="../caipiras-imagens/hq18.png" alt=""></a>
             <h2>018. Thunderbolts 103</h2>
         </section>
 
         <section class="hq">
-            <a href="https://drive.google.com/file/d/0Bys-1hA9z7WlTG80MkxXY05FVWc/view?usp=drive_link&resourcekey=0-xwTqEwc1zUcHkoWYeA1XLQ"
+            <a href="https://stfly.me/C001"
                 target="_blank"><img src="../caipiras-imagens/hq19.png" alt=""></a>
             <h2>019. Wolverine v3 43</h2>
         </section>
 
         <section class="hq">
-            <a href="https://drive.google.com/file/d/0Bys-1hA9z7WlSkRKYVJ6dHBUbVk/view?usp=drive_link&resourcekey=0-sDcN7SqhrFlqI0GnR_N0_A"
+            <a href="https://stfly.me/C001"
                 target="_blank"><img src="../caipiras-imagens/hq20.png" alt=""></a>
             <h2>020. X-Factor v2 08</h2>
         </section>
 
         <section class="hq">
-            <a href="https://drive.google.com/file/d/0Bys-1hA9z7WlczlXVFBpSllTVVU/view?usp=drive_link&resourcekey=0-GUM9bX6l6pm96m9-rvU5Mw"
+            <a href="https://stfly.me/C001"
                 target="_blank"><img src="../caipiras-imagens/hq21.png" alt=""></a>
             <h2>021. Guerra Civil 03 de 07</h2>
         </section>
 
         <section class="hq">
-            <a href="https://drive.google.com/file/d/0Bys-1hA9z7WlTUlCLU5UUkNQZVE/view?usp=drive_link&resourcekey=0-MheJl01sS0Dvs9DC2djBSg"
+            <a href="https://stfly.me/C001"
                 target="_blank"><img src="../caipiras-imagens/hq22.png" alt=""></a>
             <h2>022. Frontline 03 de 11</h2>
         </section>
 
         <section class="hq">
-            <a href="https://drive.google.com/file/d/0Bys-1hA9z7WlU1g4amhnOEpITkE/view?usp=drive_link&resourcekey=0-Fyt3Iva5pQlR6G0csY5jTw"
+            <a href="https://stfly.me/C001"
                 target="_blank"><img src="../caipiras-imagens/hq23.png" alt=""></a>
             <h2>023. Frontline 04 de 11</h2>
         </section>
 
         <section class="hq">
-            <a href="https://drive.google.com/file/d/0Bys-1hA9z7Wlc3pXLVI1UVZUa0k/view?usp=drive_link&resourcekey=0-c3reU7DQEfTSuTFDdIKvyw"
+            <a href="https://stfly.me/C001"
                 target="_blank"><img src="../caipiras-imagens/hq24.png" alt=""></a>
             <h2>024. X-Men 01 de 04</h2>
         </section>
 
         <section class="hq">
-            <a href="https://drive.google.com/file/d/0Bys-1hA9z7WlZmktM1BSVTNrMGs/view?usp=drive_link&resourcekey=0-D2w9KXOk0S5iU4wJXBMV5g"
+            <a href="https://stfly.me/C001"
                 target="_blank"><img src="../caipiras-imagens/hq25.png" alt=""></a>
             <h2>025. Jovens Vingadores & Fugitivos 01 de 04</h2>
         </section>
 
         <section class="hq">
-            <a href="https://drive.google.com/file/d/0Bys-1hA9z7WlYTBMZmp1NHhaV2s/view?usp=drive_link&resourcekey=0-3rkpI7vky5UIxfQjgh0w6Q"
+            <a href="https://stfly.me/C001"
                 target="_blank"><img src="../caipiras-imagens/hq26.png" alt=""></a>
             <h2>026. O Espetacular Homem-Aranha 534</h2>
         </section>
 
         <section class="hq">
-            <a href="https://drive.google.com/file/d/0Bys-1hA9z7WlMURHc3h4SUNfTDQ/view?usp=drive_link&resourcekey=0-m4g8yHPABqGnMlogm0KB5Q"
+            <a href="https://stfly.me/C001"
                 target="_blank"><img src="../caipiras-imagens/hq27.png" alt=""></a>
             <h2>027. Pantera Negra v4 18</h2>
         </section>
 
         <section class="hq">
-            <a href="https://drive.google.com/file/d/0Bys-1hA9z7WldmlyWFliWE1GZVk/view?usp=drive_link&resourcekey=0-vP5RYxjinvCxahegUmun1w"
+            <a href="https://stfly.me/C001"
                 target="_blank"><img src="../caipiras-imagens/hq28.png" alt=""></a>
             <h2>028. Cable & Deadpool 30</h2>
         </section>
 
         <section class="hq">
-            <a href="https://drive.google.com/file/d/0Bys-1hA9z7WlTmtZMUVLNHAyZjQ/view?usp=drive_link&resourcekey=0-OjakiluwMgKgRAThqrO_Vw"
+            <a href="https://stfly.me/C001"
                 target="_blank"><img src="../caipiras-imagens/hq29.png" alt=""></a>
             <h2>029. Quarteto Fantastico 539</h2>
         </section>
 
         <section class="hq">
-            <a href="https://drive.google.com/file/d/0Bys-1hA9z7WlTl9MLVp6YVl0T3c/view?usp=drive_link&resourcekey=0-jp5XmFfaGT4SnJvwZYhVgg"
+            <a href="https://stfly.me/C001"
                 target="_blank"><img src="../caipiras-imagens/hq30.png" alt=""></a>
             <h2>030. Novos Vingadores.22.</h2>
         </section>
 
         <section class="hq">
-            <a href="https://drive.google.com/file/d/0Bys-1hA9z7WlVnNYU0tiVElvdkE/view?usp=drive_link&resourcekey=0-3qAhEBaCkHGTdSyu0wkyLw"
+            <a href="https://stfly.me/C001"
                 target="_blank"><img src="../caipiras-imagens/hq31.png" alt=""></a>
             <h2>031. Thunderbolts 104</h2>
         </section>
 
         <section class="hq">
-            <a href="https://drive.google.com/file/d/0Bys-1hA9z7WlX2VPZ3BlYklaSGM/view?usp=drive_link&resourcekey=0-3eqnis7nO2MC3IvpffjftQ"
+            <a href="https://stfly.me/C001"
                 target="_blank"><img src="../caipiras-imagens/hq32.png" alt=""></a>
             <h2>032. Wolverine v3 44</h2>
         </section>
 
         <section class="hq">
-            <a href="https://drive.google.com/file/d/0Bys-1hA9z7WlOEZmZV84WXRGdDA/view?usp=drive_link&resourcekey=0-1rMK3hdzHeAKQucWT6wfNg"
+            <a href="https://stfly.me/C001"
                 target="_blank"><img src="../caipiras-imagens/hq33.png" alt=""></a>
             <h2>033. X-Factor v2 09</h2>
         </section>
 
         <section class="hq">
-            <a href="https://drive.google.com/file/d/0Bys-1hA9z7WldnpZdklhOFFhVDQ/view?usp=drive_link&resourcekey=0-vk3Hj_kt5CdBrR18-DIKsA"
+            <a href="https://stfly.me/C001"
                 target="_blank"><img src="../caipiras-imagens/hq34.png" alt=""></a>
             <h2>034. Frontline 05 de 11</h2>
         </section>
 
         <section class="hq">
-            <a href="https://drive.google.com/file/d/0Bys-1hA9z7WlVHJpMEhFYWkwV1k/view?usp=drive_link&resourcekey=0-33aAvrL6ulUCQuZn3eEJmA"
+            <a href="https://stfly.me/C001"
                 target="_blank"><img src="../caipiras-imagens/hq35.png" alt=""></a>
             <h2>035. X-Men 02 de 04</h2>
         </section>
 
         <section class="hq">
-            <a href="https://drive.google.com/file/d/0Bys-1hA9z7WlckE5TnJyR0dQaVU/view?usp=drive_link&resourcekey=0-tbqXiIXmYLVEXtcgDdsziw"
+            <a href="https://stfly.me/C001"
                 target="_blank"><img src="../caipiras-imagens/hq36.png" alt=""></a>
             <h2>036. Jovens Vingadores & Fugitivos 02 de 04</h2>
         </section>
 
         <section class="hq">
-            <a href="https://drive.google.com/file/d/0Bys-1hA9z7WleG5Dd3pEWWo4RGc/view?usp=drive_link&resourcekey=0-pJwmNDi-ufI0cMfE3GJG9A"
+            <a href="https://stfly.me/C001"
                 target="_blank"><img src="../caipiras-imagens/hq37.png" alt=""></a>
             <h2>037. Cable & Deadpool 31</h2>
         </section>
 
         <section class="hq">
-            <a href="https://drive.google.com/file/d/0Bys-1hA9z7WlVk11QzZ6ZXN5Umc/view?usp=drive_link&resourcekey=0-pY-ApL6p2V4mwkRqJ1NZVg"
+            <a href="https://stfly.me/C001"
                 target="_blank"><img src="../caipiras-imagens/hq38.png" alt=""></a>
             <h2>038. Herois de Aluguel 01</h2>
         </section>
 
         <section class="hq">
-            <a href="https://drive.google.com/file/d/0Bys-1hA9z7WlbjdaSTlDTlkxSFk/view?usp=drive_link&resourcekey=0-qw8oyih6O55DkARKq7EwHA"
+            <a href="https://stfly.me/C001"
                 target="_blank"><img src="../caipiras-imagens/hq39.png" alt=""></a>
             <h2>039. Ms.Marvel.v2 06</h2>
         </section>
 
         <section class="hq">
-            <a href="https://drive.google.com/file/d/0Bys-1hA9z7WleUFwTHZyeFpqWk0/view?usp=drive_link&resourcekey=0-OdbMqoVhZqMpcyTgucpuFw"
+            <a href="https://stfly.me/C001"
                 target="_blank"><img src="../caipiras-imagens/hq40.png" alt=""></a>
             <h2>040. Pantera Negra v4 19</h2>
         </section>
 
         <section class="hq">
-            <a href="https://drive.google.com/file/d/0Bys-1hA9z7WlR2llRnl3YlFEaTQ/view?usp=drive_link&resourcekey=0-AJJFcuyJrScx38P80WhbrQ"
+            <a href="https://stfly.me/C001"
                 target="_blank"><img src="../caipiras-imagens/hq41.png" alt=""></a>
             <h2>041. Novos Vingadores 23</h2>
         </section>
 
         <section class="hq">
-            <a href="https://drive.google.com/file/d/0Bys-1hA9z7WlNzlnVWVhUVR1djA/view?usp=drive_link&resourcekey=0-zttM4LKrHPhnXwaprEyrVQ"
+            <a href="https://stfly.me/C001"
                 target="_blank"><img src="../caipiras-imagens/hq42.png" alt=""></a>
             <h2>042. Thunderbolts 105</h2>
         </section>
 
         <section class="hq">
-            <a href="https://drive.google.com/file/d/0Bys-1hA9z7WlUHdydXhHM1NOYnM/view?usp=drive_link&resourcekey=0-AKYd-Sa4bnuNChi98Te28A"
+            <a href="https://stfly.me/C001"
                 target="_blank"><img src="../caipiras-imagens/hq43.png" alt=""></a>
             <h2>043. Wolverine v3 45</h2>
         </section>
 
         <section class="hq">
-            <a href="https://drive.google.com/file/d/0Bys-1hA9z7WlVVJ4MVRuWllxZXc/view?usp=drive_link&resourcekey=0-EGs-GjqbXlppnhUzVQPXtw"
+            <a href="https://stfly.me/C001"
                 target="_blank"><img src="../caipiras-imagens/hq44.png" alt=""></a>
             <h2>044. Guerra Civil 04 de 07.</h2>
         </section>
