--- a/src/html/simptoons.html
+++ b/src/html/simptoons.html
@@ -53,337 +53,337 @@
         </section>
 
         <section class="hq">
-            <a href="https://stfly.me/SIM001"
+            <a href="https://stfly.me/SIM002"
                 target="_blank"><img src="../os-simptoons-imagens/hq2.webp" alt=""></a>
             <h2>002 O Espetacular Homem-Aranha 530</h2>
         </section>
 
         <section class="hq">
-            <a href="https://stfly.me/SIM001"
-                target="_blank"><img src="../os-simptoons-imagens/hq3.png" alt="//"></a>
+            <a href="https://stfly.me/SIM003"
+                target="_blank"><img src="../os-simptoons-imagens/hq3.png" alt=""></a>
             <h2>003 Quarteto Fantastico 536</h2>
         </section>
 
         <section class="hq">
-            <a href="https://stfly.me/SIM001"
+            <a href="https://stfly.me/SIM004"
                 target="_blank"><img src="../os-simptoons-imagens/hq4.png" alt=""></a>
             <h2>004. Novos Vingadores - Illuminati</h2>
         </section>
 
         <section class="hq">
-            <a href="https://stfly.me/SIM001"
+            <a href="https://stfly.me/SIM005"
                 target="_blank"><img src="../os-simptoons-imagens/hq5.png" alt=""></a>
             <h2>005. O Espetacular Homem-Aranha 531</h2>
         </section>
 
         <section class="hq">
-            <a href="https://stfly.me/SIM001"
+            <a href="https://stfly.me/SIM006"
                 target="_blank"><img src="../os-simptoons-imagens/hq6.png" alt=""></a>
             <h2>006. Opening Shot - Livro de Esboços</h2>
         </section>
 
         <section class="hq">
-            <a href="https://stfly.me/SIM001"
+            <a href="https://stfly.me/SIM007"
                 target="_blank"><img src="../os-simptoons-imagens/hq7.png" alt=""></a>
             <h2>007. Quarteto Fantastico 537</h2>
         </section>
 
         <section class="hq">
-            <a href="https://stfly.me/SIM001"
+            <a href="https://stfly.me/SIM008"
                 target="_blank"><img src="../os-simptoons-imagens/hq8.png" alt=""></a>
             <h2>008. Guerra Civil 01 de 07</h2>
         </section>
 
         <section class="hq">
-            <a href="https://stfly.me/SIM001"
+            <a href="https://stfly.me/SIM009"
                 target="_blank"><img src="../os-simptoons-imagens/hq9.png" alt=""></a>
             <h2>009. O Espetacular Homem-Aranha 532</h2>
         </section>
 
         <section class="hq">
-            <a href="https://stfly.me/SIM001"
+            <a href="https://stfly.me/SIM010"
                 target="_blank"><img src="../os-simptoons-imagens/hq10.png" alt=""></a>
             <h2>010. Mulher Hulk v2 08</h2>
         </section>
 
         <section class="hq">
-            <a href="https://stfly.me/SIM001"
+            <a href="https://stfly.me/SIM011"
                 target="_blank"><img src="../os-simptoons-imagens/hq11.png" alt=""></a>
             <h2>011. Wolverine v3 42</h2>
         </section>
 
         <section class="hq">
-            <a href="https://stfly.me/SIM001"
+            <a href="https://stfly.me/SIM012"
                 target="_blank"><img src="../os-simptoons-imagens/hq12.png" alt=""></a>
             <h2>012. Guerra Civil 02 de 07</h2>
         </section>
 
         <section class="hq">
-            <a href="https://stfly.me/SIM001"
+            <a href="https://stfly.me/SIM013"
                 target="_blank"><img src="../os-simptoons-imagens/hq13.png" alt=""></a>
             <h2>013. Frontline 01 de 11</h2>
         </section>
 
         <section class="hq">
-            <a href="https://stfly.me/SIM001"
+            <a href="https://stfly.me/SIM014"
                 target="_blank"><img src="../os-simptoons-imagens/hq14.png" alt=""></a>
             <h2>014. Frontline 02 de 11</h2>
         </section>
 
         <section class="hq">
-            <a href="https://stfly.me/SIM001"
+            <a href="https://stfly.me/SIM015"
                 target="_blank"><img src="../os-simptoons-imagens/hq15.png" alt=""></a>
             <h2>015. O Espetacular Homem-Aranha 533</h2>
         </section>
 
         <section class="hq">
-            <a href="https://stfly.me/SIM001"
+            <a href="https://stfly.me/SIM016"
                 target="_blank"><img src="../os-simptoons-imagens/hq16.png" alt=""></a>
             <h2>016. Quarteto Fantastico 538</h2>
         </section>
 
         <section class="hq">
-            <a href="https://stfly.me/SIM001"
+            <a href="https://stfly.me/SIM017"
                 target="_blank"><img src="../os-simptoons-imagens/hq17.png" alt=""></a>
             <h2>017. NOVOS VINGADORES 21</h2>
         </section>
 
         <section class="hq">
-            <a href="https://stfly.me/SIM001"
+            <a href="https://stfly.me/SIM018"
                 target="_blank"><img src="../os-simptoons-imagens/hq18.png" alt=""></a>
             <h2>018. Thunderbolts 103</h2>
         </section>
 
         <section class="hq">
-            <a href="https://stfly.me/SIM001"
+            <a href="https://stfly.me/SIM019"
                 target="_blank"><img src="../os-simptoons-imagens/hq19.png" alt=""></a>
             <h2>019. Wolverine v3 43</h2>
         </section>
 
         <section class="hq">
-            <a href="https://stfly.me/SIM001"
+            <a href="https://stfly.me/SIM020"
                 target="_blank"><img src="../os-simptoons-imagens/hq20.png" alt=""></a>
             <h2>020. X-Factor v2 08</h2>
         </section>
 
         <section class="hq">
-            <a href="https://stfly.me/SIM001"
+            <a href="https://stfly.me/SIM021"
                 target="_blank"><img src="../os-simptoons-imagens/hq21.png" alt=""></a>
             <h2>021. Guerra Civil 03 de 07</h2>
         </section>
 
         <section class="hq">
-            <a href="https://stfly.me/SIM001"
+            <a href="https://stfly.me/SIM022"
                 target="_blank"><img src="../os-simptoons-imagens/hq22.png" alt=""></a>
             <h2>022. Frontline 03 de 11</h2>
         </section>
 
         <section class="hq">
-            <a href="https://stfly.me/SIM001"
+            <a href="https://stfly.me/SIM023"
                 target="_blank"><img src="../os-simptoons-imagens/hq23.png" alt=""></a>
             <h2>023. Frontline 04 de 11</h2>
         </section>
 
         <section class="hq">
-            <a href="https://stfly.me/SIM001"
+            <a href="https://stfly.me/SIM024"
                 target="_blank"><img src="../os-simptoons-imagens/hq24.png" alt=""></a>
             <h2>024. X-Men 01 de 04</h2>
         </section>
 
         <section class="hq">
-            <a href="https://stfly.me/SIM001"
+            <a href="https://stfly.me/SIM025"
                 target="_blank"><img src="../os-simptoons-imagens/hq25.png" alt=""></a>
             <h2>025. Jovens Vingadores & Fugitivos 01 de 04</h2>
         </section>
 
         <section class="hq">
-            <a href="https://stfly.me/SIM001"
+            <a href="https://stfly.me/SIM026"
                 target="_blank"><img src="../os-simptoons-imagens/hq26.png" alt=""></a>
             <h2>026. O Espetacular Homem-Aranha 534</h2>
         </section>
 
         <section class="hq">
-            <a href="https://stfly.me/SIM001"
+            <a href="https://stfly.me/SIM027"
                 target="_blank"><img src="../os-simptoons-imagens/hq27.png" alt=""></a>
             <h2>027. Pantera Negra v4 18</h2>
         </section>
 
         <section class="hq">
-            <a href="https://stfly.me/SIM001"
+            <a href="https://stfly.me/SIM028"
                 target="_blank"><img src="../os-simptoons-imagens/hq28.png" alt=""></a>
             <h2>028. Cable & Deadpool 30</h2>
         </section>
 
         <section class="hq">
-            <a href="https://stfly.me/SIM001"
+            <a href="https://stfly.me/SIM029"
                 target="_blank"><img src="../os-simptoons-imagens/hq29.png" alt=""></a>
             <h2>029. Quarteto Fantastico 539</h2>
         </section>
 
         <section class="hq">
-            <a href="https://stfly.me/SIM001"
+            <a href="https://stfly.me/SIM030"
                 target="_blank"><img src="../os-simptoons-imagens/hq30.png" alt=""></a>
             <h2>030. Novos Vingadores.22.</h2>
         </section>
 
         <section class="hq">
-            <a href="https://stfly.me/SIM001"
+            <a href="https://stfly.me/SIM031"
                 target="_blank"><img src="../os-simptoons-imagens/hq31.png" alt=""></a>
             <h2>031. Thunderbolts 104</h2>
         </section>
 
         <section class="hq">
-            <a href="https://stfly.me/SIM001"
+            <a href="https://stfly.me/SIM032"
                 target="_blank"><img src="../os-simptoons-imagens/hq32.png" alt=""></a>
             <h2>032. Wolverine v3 44</h2>
         </section>
 
         <section class="hq">
-            <a href="https://stfly.me/SIM001"
+            <a href="https://stfly.me/SIM033"
                 target="_blank"><img src="../os-simptoons-imagens/hq33.png" alt=""></a>
             <h2>033. X-Factor v2 09</h2>
         </section>
 
         <section class="hq">
-            <a href="https://stfly.me/SIM001"
+            <a href="https://stfly.me/SIM034"
                 target="_blank"><img src="../os-simptoons-imagens/hq34.png" alt=""></a>
             <h2>034. Frontline 05 de 11</h2>
         </section>
 
         <section class="hq">
-            <a href="https://stfly.me/SIM001"
+            <a href="https://stfly.me/SIM035"
                 target="_blank"><img src="../os-simptoons-imagens/hq35.png" alt=""></a>
             <h2>035. X-Men 02 de 04</h2>
         </section>
 
         <section class="hq">
-            <a href="https://stfly.me/SIM001"
+            <a href="https://stfly.me/SIM036"
                 target="_blank"><img src="../os-simptoons-imagens/hq36.png" alt=""></a>
             <h2>036. Jovens Vingadores & Fugitivos 02 de 04</h2>
         </section>
 
         <section class="hq">
-            <a href="https://stfly.me/SIM001"
+            <a href="https://stfly.me/SIM037"
                 target="_blank"><img src="../os-simptoons-imagens/hq37.png" alt=""></a>
             <h2>037. Cable & Deadpool 31</h2>
         </section>
 
         <section class="hq">
-            <a href="https://stfly.me/SIM001"
+            <a href="https://stfly.me/SIM038"
                 target="_blank"><img src="../os-simptoons-imagens/hq38.png" alt=""></a>
             <h2>038. Herois de Aluguel 01</h2>
         </section>
 
         <section class="hq">
-            <a href="https://stfly.me/SIM001"
+            <a href="https://stfly.me/SIM039"
                 target="_blank"><img src="../os-simptoons-imagens/hq39.png" alt=""></a>
             <h2>039. Ms.Marvel.v2 06</h2>
         </section>
 
         <section class="hq">
-            <a href="https://stfly.me/SIM001"
+            <a href="https://stfly.me/SIM040"
                 target="_blank"><img src="../os-simptoons-imagens/hq40.png" alt=""></a>
             <h2>040. Pantera Negra v4 19</h2>
         </section>
 
         <section class="hq">
-            <a href="https://stfly.me/SIM001"
+            <a href="https://stfly.me/SIM041"
                 target="_blank"><img src="../os-simptoons-imagens/hq41.png" alt=""></a>
             <h2>041. Novos Vingadores 23</h2>
         </section>
 
         <section class="hq">
-            <a href="https://stfly.me/SIM001"
+            <a href="https://stfly.me/SIM042"
                 target="_blank"><img src="../os-simptoons-imagens/hq42.png" alt=""></a>
             <h2>042. Thunderbolts 105</h2>
         </section>
 
         <section class="hq">
-            <a href="https://stfly.me/SIM001"
+            <a href="https://stfly.me/SIM043"
                 target="_blank"><img src="../os-simptoons-imagens/hq43.png" alt=""></a>
             <h2>043. Wolverine v3 45</h2>
         </section>
 
         <section class="hq">
-            <a href="https://stfly.me/SIM001"
+            <a href="https://stfly.me/SIM044"
                 target="_blank"><img src="../os-simptoons-imagens/hq44.png" alt=""></a>
             <h2>044. Guerra Civil 04 de 07.</h2>
         </section>
 
         <section class="hq">
-            <a href="https://stfly.me/SIM001"
+            <a href="https://stfly.me/SIM045"
                 target="_blank"><img src="../os-simptoons-imagens/hq45.png" alt=""></a>
             <h2>045. Frontline 06 de 11</h2>
         </section>
 
         <section class="hq">
-            <a href="https://stfly.me/SIM001"
+            <a href="https://stfly.me/SIM046"
                 target="_blank"><img src="../os-simptoons-imagens/hq46.png" alt=""></a>
             <h2>046. X-Men 03 de 04</h2>
         </section>
 
         <section class="hq">
-            <a href="https://stfly.me/SIM001"
+            <a href="https://stfly.me/SIM047"
                 target="_blank"><img src="../os-simptoons-imagens/hq47.png" alt=""></a>
             <h2>047. Jovens Vingadores & Fugitivos 03 de 04</h2>
         </section>
 
         <section class="hq">
-            <a href="https://stfly.me/SIM001"
+            <a href="https://stfly.me/SIM048"
                 target="_blank"><img src="../os-simptoons-imagens/hq48.png" alt=""></a>
             <h2>048. O Espetacular Homem-Aranha 535</h2>
         </section>
 
         <section class="hq">
-            <a href="https://stfly.me/SIM001"
+            <a href="https://stfly.me/SIM049"
                 target="_blank"><img src="../os-simptoons-imagens/hq49.png" alt=""></a>
             <h2>049. Cable & Deadpool 32</h2>
         </section>
 
         <section class="hq">
-            <a href="https://stfly.me/SIM001"
+            <a href="https://stfly.me/SIM050"
                 target="_blank"><img src="../os-simptoons-imagens/hq50.png" alt=""></a>
             <h2>050. Capitão America 22</h2>
         </section>
 
         <section class="hq">
-            <a href="https://stfly.me/SIM001"
+            <a href="https://stfly.me/SIM051"
                 target="_blank"><img src="../os-simptoons-imagens/hq51.png" alt=""></a>
             <h2>051. Quarteto Fantastico 540</h2>
         </section>
 
         <section class="hq">
-            <a href="https://stfly.me/SIM001"
+            <a href="https://stfly.me/SIM052"
                 target="_blank"><img src="../os-simptoons-imagens/hq52.png" alt=""></a>
             <h2>052. Pantera Negra v4 20</h2>
         </section>
 
         <section class="hq">
-            <a href="https://stfly.me/SIM001"
+            <a href="https://stfly.me/SIM053"
                 target="_blank"><img src="../os-simptoons-imagens/hq53.png" alt=""></a>
             <h2>053. Herois de Aluguel 02</h2>
         </section>
 
         <section class="hq">
-            <a href="https://stfly.me/SIM001"
+            <a href="https://stfly.me/SIM054"
                 target="_blank"><img src="../os-simptoons-imagens/hq54.png" alt=""></a>
             <h2>054. Ms.Marvel v2 07.</h2>
         </section>
 
         <section class="hq">
-            <a href="https://stfly.me/SIM001"
+            <a href="https://stfly.me/SIM055"
                 target="_blank"><img src="../os-simptoons-imagens/hq55.png" alt=""></a>
             <h2>055. Wolverine v3 46</h2>
         </section>
 
         <section class="hq">
-            <a href="https://stfly.me/SIM001"
+            <a href="https://stfly.me/SIM056"
                 target="_blank"><img src="../os-simptoons-imagens/hq56.png" alt=""></a>
             <h2>056. Escolhendo Lados</h2>
         </section>
 
         <section class="hq">
-            <a href="https://stfly.me/SIM001"
+            <a href="https://stfly.me/SIM057"
                 target="_blank"><img src="../os-simptoons-imagens/hq57.png" alt=""></a>
             <h2>057. Frontline 07 de 11</h2>
         </section>
