--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
 <body class="fundo-familia-sacana">
     <header>
+        
         <h1 class="titulo">Familia Sacana</h1>
 
         <div class="wrapper">
@@ -179,7 +180,7 @@
         </section>
 
         <section class="hq">
-            <a href="https://stfly.me/FS024"
+            <a href="https://stfly.xyz/FS024v2"
                 target="_blank"><img src="./src/imagens/hq24.png" alt=""></a>
             <h2>024. X-Men 01 de 04</h2>
         </section>
