--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" type="text/css" href="./src/css/style.css">
     <link rel="stylesheet" href="./src/css/reponsivo.css">
 
-    <title>Minha Coleção de HQs</title>
+    <title>qqqqqq</title>
 
 </head>
 
