--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body class="fundo-familia-sacana">
     <header>
         
-        <h1 class="titulo">Familia Sacana</h1>
+        <h1 class="titulo">Familia Cacana</h1>
 
         <div class="wrapper">
             <div class="cover-container" id="coverContainer">
