--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
     <link rel="stylesheet" type="text/css" href="./src/css/style.css">
     <link rel="stylesheet" href="./src/css/reponsivo.css">
+    <link rel="shortcut icon" href="./src/imagens/favicon.png" type="image/x-icon">
 
     <title>Tufos Gratis</title>
 
@@ -21,7 +22,7 @@
 <body class="fundo-familia-sacana">
     <header>
         
-        <h1 class="titulo">Familia Sacana</h1>
+        <a href="./src/html/planos.html"><h1 class="titulo">VER SEM ANÚNCIO</h1></a>
 
         <div class="wrapper">
             <div class="cover-container" id="coverContainer">
