--- a/src/html/simptoons.html
+++ b/src/html/simptoons.html
@@ -13,14 +13,15 @@
 
     <link rel="stylesheet" type="text/css" href="../css/style.css">
     <link rel="stylesheet" href="../css/reponsivo.css">
+    <link rel="shortcut icon" href="../imagens/favicon.png" type="image/x-icon">
 
-    <title>Minha Coleção de HQs</title>
+    <title>Tufos Gratis</title>
 
 </head>
 
 <body class="fundo-os-simptoons">
     <header>
-        <h1 class="titulo">Os Simptoons</h1>
+        <a href="../html/planos.html"><h1 class="titulo">VER SEM ANÚNCIO</h1></a>
 
         <div class="wrapper">
             <div class="cover-container" id="coverContainer">
